# agent-tackle-box

./: .gitignore  README.md
.github/scripts/: check_diff.py
.github/workflows/: _lint.yml  _test.yml  check_diffs.yml  release.yml
projects/agent-debugger/: Makefile  Plan.md  README.md  StorePlan.md  pyproject.toml
projects/agent-debugger/.adb/: history.json
projects/agent-debugger/adb/: __init__.py  app.py  cli.py  events.py  extensions.py  runner.py  tracer.py
projects/agent-debugger/adb/panels/: diff.py  messages.py  source.py  state.py  store.py  tools.py  traces.py
projects/agent-debugger/agent_debugger/: __init__.py  app.py  breakpoints.py  cli.py  events.py  extensions.py  message_utils.py  runner.py  store_backend.py  tracer.py
projects/agent-debugger/agent_debugger/panels/: __init__.py  diff.py  logs.py  messages.py  source.py  stack.py  state.py  store.py  tools.py  variables.py
projects/agent-debugger/docs/: Build.md  Design.md
projects/agent-debugger/examples/: simple_agent.py  simple_extensions.py
projects/agent-debugger/tests/: test_app.py  test_breakpoints.py  test_cli.py  test_debug_keys.py  test_events.py  test_simple_agent.py  test_store_backend.py
