[project]
name = "agent-debugger"
version = "0.1.0"
description = "Agent Debugger for LangChain/LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "textual>=3.0",
    "rich>=13.0",
    "deepdiff>=8.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
adb = "agent_debugger.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_debugger"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
