[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-debugger"
version = "0.1.7"
description = "Agent Debugger for LangChain/LangGraph"
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "Derrick Kondo", email = "dkondo@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "textual>=3.0",
    "rich>=13.0",
    "deepdiff>=8.0",
    "click>=8.0",
    "dotenv>=0.9.9",
    "google-cloud-aiplatform>=1.137.0",
    "litellm>=1.81.12",
]
keywords = ["langchain", "langgraph", "debugger", "agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Debuggers",
]

[project.optional-dependencies]
litellm = [
    "python-dotenv>=1.0",
    "langchain-litellm>=0.5.1",
]

[project.scripts]
adb = "agent_debugger.cli:main"

[project.urls]
Homepage = "https://github.com/dkondo/agent-tackle-box"
Repository = "https://github.com/dkondo/agent-tackle-box"
"Source Code" = "https://github.com/dkondo/agent-tackle-box/tree/main/projects/agent-debugger"

[tool.hatch.build.targets.wheel]
packages = ["agent_debugger"]

[dependency-groups]
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<8.0.0",
    "pytest-asyncio>=0.24,<2.0.0",
]
lint = [
    "ruff>=0.5.0,<1.0.0",
]
typing = [
    "mypy>=1.10.0,<2.0.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "T201",   # print statements
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
    "D",      # pydocstyle
    "ANN",    # annotations
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "ANN401", # Dynamically typed expressions (Any)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    "D",      # Documentation rules
    "ANN",    # Annotations
]
"examples/*" = [
    "T201",   # print statements OK in examples
    "D",      # Documentation rules
    "ANN",    # Annotations
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5 -vv"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
omit = ["tests/*", "examples/*"]
